Target Java 17 in Java and Scala compiler options